using attachments instead of instance variables

--- a/force-app/main/default/classes/VDT_AttachmentSelector.cls
+++ b/force-app/main/default/classes/VDT_AttachmentSelector.cls
@@ -1,4 +1,12 @@
 public inherited sharing class VDT_AttachmentSelector {
+
+    private List<String> additionalFields = new List<String>();
+
+    public VDT_AttachmentSelector withAdditionalFields(List<String> additionalFields) {
+        this.additionalFields = additionalFields;
+        return this;
+    }
+
     public String getObjectName() {
         return 'Attachment';
     }
@@ -10,7 +18,11 @@ public inherited sharing class VDT_AttachmentSelector {
     }
 
     public String getFieldListString() {
-        return String.join(this.getFieldList(), ',');
+        List<String> fields = this.getFieldList();
+        if (!this.additionalFields.isEmpty()) {
+            fields.addAll(this.additionalFields);
+        }
+        return String.join(fields, ',');
     }
 
     public List<Attachment> getByNameAndParentId(String name, Id parentId) {
@@ -18,6 +30,21 @@ public inherited sharing class VDT_AttachmentSelector {
             'SELECT {0} FROM {1} ' + 
             'WHERE  Name = :name AND ' +
             '       ParentId = :parentId ' +
+            'WITH   SECURITY_ENFORCED ', 
+            new List<String>{
+                getFieldListString(),
+                getObjectName()
+            }
+        );
+
+        return Database.query(query);
+    }
+
+    public List<Attachment> getByParentIdsAndName(Set<String> parentIds, String name) {
+        String query = String.format(
+            'SELECT {0} FROM {1} ' + 
+            'WHERE  Name = :name AND ' +
+            '       ParentId IN :parentIds ' +
             'WITH   SECURITY_ENFORCED ', 
             new List<String>{
                 getFieldListString(),
