--- a/force-app/main/default/classes/VDT_AttachmentService.cls
+++ b/force-app/main/default/classes/VDT_AttachmentService.cls
@@ -1,4 +1,5 @@
 public inherited sharing class VDT_AttachmentService {
+    
     public static final String JSON_FORMAT = '.json';
 
     public static void createAttachmentForRecord(String content, String name, String format, Id recordId) {
@@ -28,6 +29,39 @@ public inherited sharing class VDT_AttachmentService {
         }
 
         return result;
+    }
+
+    public static void upsertAttachmentForRecords(Map<String, String> recordMap, String name) {
+        Set<String> recordIds = recordMap.keySet();
+        List<Attachment> attachments = new VDT_AttachmentSelector().withAdditionalFields(new List<String>{'ParentId'}).getByParentIdsAndName(recordIds, name);
+        Map<String, Attachment> existingAttachmentsByParentId = new Map<String, Attachment>();
+        for (Attachment attachment : attachments) {
+            existingAttachmentsByParentId.put(attachment.ParentId, attachment);
+        }
+        List<Attachment> upsertAttachments = new List<Attachment>();
+        for(String parentId : recordMap.keySet()) {
+            Attachment att = new Attachment();
+            if (existingAttachmentsByParentId.containsKey(parentId)) {
+                att = existingAttachmentsByParentId.get(parentId);
+            } else {
+                att.Name = name;
+                att.ParentId = parentId;
+            }
+            att.Body = Blob.valueOf(recordMap.get(parentId));
+            upsertAttachments.add(att);
+        }
+        upsert upsertAttachments;
+    }
+
+    public static Map<String, String> getAttachmentsByParentId(Set<String> parentIds, String name) {
+        Map<String, String> contentByParentId = new Map<String, String>();
+        List<Attachment> attachments = new VDT_AttachmentSelector()
+            .withAdditionalFields(new List<String>{'ParentId'})
+            .getByParentIdsAndName(parentIds, name);
+        for (Attachment attachment : attachments) {
+            contentByParentId.put(attachment.ParentId, attachment.Body.toString());
+        }
+        return contentByParentId;
     }
 
     public class AttachmentServiceException extends Exception {}
