--- a/force-app/main/default/classes/VDT_ObjectCalculationBuilder.cls
+++ b/force-app/main/default/classes/VDT_ObjectCalculationBuilder.cls
@@ -1,4 +1,5 @@
 public inherited sharing class VDT_ObjectCalculationBuilder {
+
     private String objectName;
     private List<String> fieldNames = new List<String>();
     private Map<String, List<String>> layoutWithFields = new Map<String, List<String>>();
@@ -6,6 +7,8 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
     private String countryField;
     Map<String, VDT_FieldSummary> summaries = new Map<String, VDT_FieldSummary>();
     public Set<String> uniqueCountryCodes = new Set<String>();
+    public static final String COUNTRY_USAGE_FILE_NAME = 'country_usage_calculations';
+    private Map<String, String> attachmentsByParent = new Map<String, String>();
 
     public VDT_ObjectCalculationBuilder(String objectName, List<String> fieldNames) { 
         this.objectName = objectName;
@@ -24,12 +27,21 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
         return this;
     }
 
+    public VDT_ObjectCalculationBuilder withCountryUsageAttachments(Map<String, String> attachmentsByParent) {
+        this.attachmentsByParent.clear();
+        this.attachmentsByParent = attachmentsByParent;
+        return this;
+    }
+
     public VDT_ObjectCalculationBuilder withFieldSummaryRecords(List<VDT_Field_Summary__c> summaries) {
         this.summaries = new Map<String, VDT_FieldSummary>(); 
         for (VDT_Field_Summary__c summary : summaries) {
             VDT_FieldSummary fieldSummary = new VDT_FieldSummary(summary.Label__c, summary.Name__c, summary.Type__c);
             fieldSummary.id = summary.Id;
-            fieldSummary.countryUsageSummary = (Map<String, VDT_FieldSummary.CountryUsageSummary>) JSON.deserialize(summary.Country_Usage_Summary__c, Map<String, VDT_FieldSummary.CountryUsageSummary>.class);
+            if (this.attachmentsByParent.containsKey(summary.Id)) {
+                fieldSummary.countryUsageSummary = (Map<String, VDT_FieldSummary.CountryUsageSummary>) 
+                                                    JSON.deserialize(this.attachmentsByParent.get(summary.Id), Map<String, VDT_FieldSummary.CountryUsageSummary>.class);
+            }
             fieldSummary.pageLayouts = (List<String>) JSON.deserialize(summary.Page_Layouts__c, List<String>.class);
             this.summaries.put(summary.Name__c, fieldSummary);
         }
@@ -40,11 +52,9 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
         List<VDT_FieldSummary> upsertSummaries = new List<VDT_FieldSummary>();
         for (String field : fieldNames) {
             VDT_FieldSummary fieldSummary = this.initFieldSummary(field);
-
-            if (!this.layoutWithFields.isEmpty()) {
+            if (!this.layoutWithFields.isEmpty() && fieldSummary.pageLayouts.isEmpty()) {
                 fieldSummary.pageLayouts = this.getPageLayoutsForField(field);
             }
-
             for (SObject record : records) {
                 String countryCode;
                 if (this.countryField.indexOf('.') >= 0) {
@@ -81,19 +91,21 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
                     } else {
                         countryUsageSummary.fieldValueOccurences.put('false', countryUsageSummary.fieldValueOccurences.get('false')+1);
                     }
-                } else if (fieldSummary.type == 'picklist') {
-                    String picklistValue = record.get(field) == null ? '' : String.valueOf(record.get(field));
-                    if (countryUsageSummary.fieldValueOccurences.get(picklistValue) == null) {
-                        countryUsageSummary.fieldValueOccurences.put(picklistValue, 1);
-                    } else {
-                        countryUsageSummary.fieldValueOccurences.put(picklistValue, countryUsageSummary.fieldValueOccurences.get(picklistValue) + 1);
-                    }
-                }
+                } 
+                // else if (fieldSummary.type == 'picklist') {
+                //     String picklistValue = record.get(field) == null ? '' : String.valueOf(record.get(field));
+                //     if (countryUsageSummary.fieldValueOccurences.get(picklistValue) == null) {
+                //         countryUsageSummary.fieldValueOccurences.put(picklistValue, 1);
+                //     } else {
+                //         countryUsageSummary.fieldValueOccurences.put(picklistValue, countryUsageSummary.fieldValueOccurences.get(picklistValue) + 1);
+                //     }
+                // }
                 this.uniqueCountryCodes.add(countryCode);
             }
             upsertSummaries.add(fieldSummary);
         }
         if (!upsertSummaries.isEmpty()) {
+            Map<String, String> attachmentContentByFieldName = new Map<String, String>();
             List<VDT_Field_Summary__c> fieldSummaries = new List<VDT_Field_Summary__c>();
             for (VDT_FieldSummary fieldSummary : upsertSummaries) {
                 VDT_Field_Summary__c fieldSummarySObject = new VDT_Field_Summary__c(
@@ -101,15 +113,23 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
                     Name__c = fieldSummary.name,
                     Page_Layouts__c = JSON.serialize(fieldSummary.pageLayouts),
                     Type__c = fieldSummary.type,
-                    Country_Usage_Summary__c = JSON.serialize(fieldSummary.countryUsageSummary),
+                    // Country_Usage_Summary__c = JSON.serialize(fieldSummary.countryUsageSummary),
                     Job_Id__c = jobId
                 );
+                attachmentContentByFieldName.put(fieldSummary.name, JSON.serialize(fieldSummary.countryUsageSummary));
                 if (!fieldSummary.isNew()) {
                     fieldSummarySObject.Id = fieldSummary.id;
                 }
                 fieldSummaries.add(fieldSummarySObject);
             }
-            upsert fieldSummaries;
+            if (!fieldSummaries.isEmpty()) {
+                upsert fieldSummaries;
+                Map<String, String> attachmentContentByParentId = new Map<String, String>();
+                for (VDT_Field_Summary__c fieldSummary : fieldSummaries) {
+                    attachmentContentByParentId.put(fieldSummary.Id, attachmentContentByFieldName.get(fieldSummary.Name__c));
+                }
+                VDT_AttachmentService.upsertAttachmentForRecords(attachmentContentByParentId, VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME + VDT_AttachmentService.JSON_FORMAT);
+            }
         }
         return this;
     }
@@ -118,7 +138,9 @@ public inherited sharing class VDT_ObjectCalculationBuilder {
         List<VDT_Field_Summary__c> summaries =  new VDT_FieldSummarySelector()
             .addWhereClause('Job_Id__c = \'' + jobId + '\'')
             .query();
-        String fieldsProperty = VDT_FieldSummary.getParsedObjects(summaries);
+        Set<String> summaryIds = (new Map<String, VDT_Field_Summary__c>(summaries)).keySet();
+        Map<String, String> attachmentsByParent = VDT_AttachmentService.getAttachmentsByParentId(summaryIds, VDT_ObjectCalculationBuilder.COUNTRY_USAGE_FILE_NAME + VDT_AttachmentService.JSON_FORMAT);
+        String fieldsProperty = VDT_FieldSummary.getParsedObjects(summaries, attachmentsByParent);
         String countriesProperty = JSON.serialize(this.uniqueCountryCodes);
         String builtJson = String.format('\'{\'"uniqueCountryCodes":{1},{0},"countryCodes":{1}\'}\'', new List<String>{
             fieldsProperty,
