--- a/force-app/main/default/classes/VDT_ToolingAPIService.cls
+++ b/force-app/main/default/classes/VDT_ToolingAPIService.cls
@@ -1,7 +1,13 @@
 public inherited sharing class VDT_ToolingAPIService {
+
     public static String toolingAPISOQL(string query) {
         String baseURL='callout:VDT_ToolingREST/';
         return VDT_HttpService.restGet( baseURL +'?q='+ (query.replace(' ', '+')), UserInfo.getSessionId());
+    } 
+
+    public static String toolingAPIQueryLocator(string queryLocator) {
+        String baseURL='callout:VDT_ToolingREST/';
+        return VDT_HttpService.restGet(baseURL + queryLocator, UserInfo.getSessionId());
     } 
 
     public static Id getCustomObjectId(string objectName) {
@@ -32,18 +38,37 @@ public inherited sharing class VDT_ToolingAPIService {
         }
 
         String sql='SELECT Layout.Name FROM ProfileLayout WHERE TableEnumOrId=\'enumOrId\'';
+        if (enumOrId == 'Account') {
+            sql='SELECT Layout.Name FROM ProfileLayout WHERE TableEnumOrId IN (\'Account\',\'PersonAccount\')';
+        }
         String body = toolingAPISOQL(sql.replace('enumOrId', enumOrId));
         Set<String> layouts = new Set<String>();
 
-        if(String.isNotBlank(body)) {
-            VDT_ToolingPageLayoutResponse.Root toolingResponse = 
-                (VDT_ToolingPageLayoutResponse.Root)JSON.deserialize(body, VDT_ToolingPageLayoutResponse.Root.class);
-            String r = String.valueOf(toolingResponse.done) + toolingResponse.entityTypeName + String.valueOf(toolingResponse.size) + String.valueOf(toolingResponse.totalSize) + String.valueOf(toolingResponse.queryLocator);
-            for(VDT_ToolingPageLayoutResponse.Record record : toolingResponse.records) {
-                String key = record.attributes.type + record.attributes.url + record.Layout.attributes;
+        if(String.isNotBlank(body)){
+            VDT_ToolingPageLayoutResponse.Root toolingResponse = (VDT_ToolingPageLayoutResponse.Root)JSON.deserialize(body, VDT_ToolingPageLayoutResponse.Root.class);
+            for(VDT_ToolingPageLayoutResponse.Record record : toolingResponse.records) {                
                 layouts.add(String.valueOf(record.Layout.Name));
+            }
+            if (String.isNotBlank(toolingResponse.nextRecordsUrl)) {
+                Set<String> pageLayouts = queryNextPage(toolingResponse.nextRecordsUrl);
+                layouts.addAll(pageLayouts);
             }
         }
         return new List<String>(layouts);
+    }
+
+    private static Set<String> queryNextPage(String queryLocatorUrl) {
+        Set<String> layoutNames = new Set<String>();
+        List<String> queryLocatorUrlParts = queryLocatorUrl.split('/');
+        String queryLocatorResponse = toolingAPIQueryLocator(queryLocatorUrlParts.get(queryLocatorUrlParts.size() - 1));
+        VDT_ToolingPageLayoutResponse.Root toolingResponse = (VDT_ToolingPageLayoutResponse.Root)JSON.deserialize(queryLocatorResponse, VDT_ToolingPageLayoutResponse.Root.class);
+        for(VDT_ToolingPageLayoutResponse.Record record : toolingResponse.records) {
+            layoutNames.add(String.valueOf(record.Layout.Name));
+        }
+        if (String.isNotBlank(toolingResponse.nextRecordsUrl)) {
+            Set<String> pageLayouts = queryNextPage(toolingResponse.nextRecordsUrl);
+            layoutNames.addAll(pageLayouts);
+        }
+        return layoutNames;
     }
 }
