--- a/force-app/main/default/classes/VDT_ToolingPageLayoutResponse.cls
+++ b/force-app/main/default/classes/VDT_ToolingPageLayoutResponse.cls
@@ -3,7 +3,8 @@ public inherited sharing class VDT_ToolingPageLayoutResponse {
         public Integer size {get;set;} 
         public Integer totalSize {get;set;} 
         public Boolean done {get;set;} 
-        public Object queryLocator {get;set;} 
+        public String nextRecordsUrl {get;set;}
+        public String queryLocator {get;set;} 
         public String entityTypeName {get;set;} 
         public List<Record> records {get;set;} 
     }
